--- a/style.css
+++ b/style.css
@@ -1,14 +1,92 @@
 body {
     padding: 0;
     margin: 0;
+    
 }
 
 .logo {
     width: 100%;
+    text-align: center;
+    margin-top: 10vh;
+}
+
+ul {
+    list-style: none;
+}
+
+.country {
+    
+    font-family: Arial, Helvetica, sans-serif;
+    height: 25px;
+    color: rgba(0,0,0,.54);
+    width: 100%;
+    line-height: 20px;
+    border-top: 1px solid #e4e4e4;
+    margin-bottom: 25px;
+  }
+ 
+.country p {
+    margin-left: 25px;
+    margin-bottom: 10px;
+}
+
+.footer-links {
     display: flex;
-    align-content: center;
 }
 
-nav {
+.footer-links-left {
+    font-family: Arial, Helvetica, sans-serif;
+    height: 25px;
+    color: rgba(0,0,0,.54);
+    width: 100%;
+    border-top: 1px solid #e4e4e4;
 
 }
+
+.footer-links-left ul {
+    display: flex;
+    flex-direction: row;
+    margin-left: 15px;
+    margin-bottom: 10px;
+    padding: 0;
+}
+
+.footer-links-left ul li {
+    margin-left: 10px;
+    font-size: small;
+    color: rgba(0,0,0,.54);
+}
+
+.footer-links-right {
+    font-family: Arial, Helvetica, sans-serif;
+    height: 25px;
+    color: rgba(0,0,0,.54);
+    width: 100%;
+    border-top: 1px solid #e4e4e4;
+
+}
+
+.footer-links-right ul {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 15px;
+    margin-bottom: 10px;
+    padding: 0;
+}
+
+.footer-links-right ul li {
+    margin-right: 10px;
+    font-size: small;
+    color: rgba(0,0,0,.54);
+
+}
+
+  footer {
+    background-color: #f2f2f2;
+    height: 100px; 
+    width: 100%;
+    margin-top: 5vh;
+    bottom: 0;
+    position: absolute;
+
+  }
