--- a/style.css
+++ b/style.css
@@ -4,6 +4,43 @@ body {
     
 }
 
+.top-links {
+    display: flex;
+    width: 100%;
+    height: 25px;
+    position: absolute;
+    top: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+}
+
+.top-left {
+    width: 100%;
+}
+
+.top-left ul {
+    display: flex; 
+    flex-direction: row;
+    padding: 0;
+}
+
+.top-left ul li {
+    margin-left: 15px;
+}
+
+.top-right {
+    width: 100%;
+}
+
+.top-right ul {
+    display: flex; 
+    flex-direction: row-reverse;
+}
+
+.top-right ul li {
+    margin-right: 15px;
+}
+
 .logo {
     width: 100%;
     text-align: center;
