--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
     padding: 0;
-    margin: 0;
-    
+    margin: 0;    
 }
 
 .top-links {
     display: flex;
     width: 100%;
     height: 25px;
+    line-height: 28px;
     position: absolute;
     top: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -16,6 +16,7 @@ body {
 
 .top-left {
     width: 100%;
+    margin-left: 20px;
 }
 
 .top-left ul {
@@ -30,29 +31,69 @@ body {
 
 .top-right {
     width: 100%;
+    margin-right: 20px;
 }
 
-.top-right ul {
+.top-right ol {
     display: flex; 
     flex-direction: row-reverse;
+    list-style: none;
 }
 
-.top-right ul li {
+.top-right ol li {
     margin-right: 15px;
-}
-
-.logo {
-    width: 100%;
-    text-align: center;
-    margin-top: 10vh;
 }
 
 ul {
     list-style: none;
 }
 
+.icon {
+    margin-top: 3px;
+}
+
+.signin {
+    background: #1a73e8;
+    border: 1px solid transparent;
+    font-weight: bold;
+    border-radius: 2px;
+    color: white; 
+}
+
+.logo {
+    width: 100%;
+    text-align: center;
+    margin-top: 15vh;
+}
+
+.searchbox {
+    margin-top: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.buttonbox {
+    width: 100%;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+.googlebutton {
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    margin-top: 10px;
+    margin-left: 7px;
+    margin-right: 7px;
+    padding: 10px;
+    text-align: center;
+}
+
 .country {
-    
     font-family: Arial, Helvetica, sans-serif;
     height: 25px;
     color: rgba(0,0,0,.54);
@@ -60,7 +101,7 @@ ul {
     line-height: 20px;
     border-top: 1px solid #e4e4e4;
     margin-bottom: 25px;
-  }
+}
  
 .country p {
     margin-left: 25px;
@@ -77,7 +118,6 @@ ul {
     color: rgba(0,0,0,.54);
     width: 100%;
     border-top: 1px solid #e4e4e4;
-
 }
 
 .footer-links-left ul {
@@ -100,7 +140,6 @@ ul {
     color: rgba(0,0,0,.54);
     width: 100%;
     border-top: 1px solid #e4e4e4;
-
 }
 
 .footer-links-right ul {
@@ -112,10 +151,9 @@ ul {
 }
 
 .footer-links-right ul li {
-    margin-right: 10px;
+    margin-right: 15px;
     font-size: small;
     color: rgba(0,0,0,.54);
-
 }
 
   footer {
@@ -125,5 +163,4 @@ ul {
     margin-top: 5vh;
     bottom: 0;
     position: absolute;
-
-  }
+}
