--- a/style.css
+++ b/style.css
@@ -79,37 +79,40 @@ ul {
 }
 
 .searchbox {
-    margin-top: 15px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.searchbox input {
+    text-align: center;
+    margin: 25px auto;
     border: 1px solid #d1e1e5;
     border-radius: 24px;
     height: 50px; 
     width: 580px;
+}
+
+.searchbox:hover {
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.2)
+}
+
+
+.searchbox input {
+    border: none;
+    height: 40px;
+    width: 500px;
+    outline: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
    }
-
-
- /*.glass {
+   
+ .glass {
     margin: 0;
     padding 0;
-    display: block;
     height: 30px;
     width: 30px;
-    background: transparent;
-    background-image: url(https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png);
-    background-size: contain;
-    background-repeat: no-repeat;
     border: none;
-    transform: translate(-41px,11px) */
+    transform: translateY(13px);
+ }
 
 .mic {
     margin: 0;
     padding 0;
-    display: block;
     height: 30px;
     width: 30px;
     background: transparent;
@@ -117,9 +120,7 @@ ul {
     background-size: contain;
     background-repeat: no-repeat;
     border: none;
-    transform: translate(-41px,11px)
-    
-
+    transform: translateY(9px);
 }
 
 .buttonbox {
@@ -140,6 +141,12 @@ ul {
     margin-right: 7px;
     padding: 10px;
     text-align: center;
+    color: #5F6368;
+}
+
+.googlebutton:hover {
+    border: 1px solid #5f6368;
+    color: #2d2e30;
 }
 
 .link {
@@ -148,6 +155,10 @@ ul {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
+}
+
+.link a {
+    color: blue;
 }
 
 a {
